up toàn bộ code